# piranha

./: .gitignore  Makefile.am  README  configure.ac  pirdump.c
include/: pir-param.h  piranha.h
lisp/: assem.lisp  calibrate.lisp  frame.lisp  grovel.lisp  kinematics.lisp  package.lisp  pir-frame.lisp  piranha.asd  piranha.lisp  pirlib.lisp  psa.lisp
lisp/demo/: 2014-02-20_camkal.lisp  2014-04-08_robot-week.lisp  2014-04-30_camkal.lisp  2014-05-21_iser-grasp.lisp  2014-07-09_biservo-humanoids.lisp  psa-20120219.lisp  psa-2014-03-20.lisp
scripts/: piranha  piranha-console  piranha-lisp  plot-tfs
src/: check-can.c  ctrl.c  kinematics.cpp  kinematics.mac  lwa4.c  lwa4.f90  pir-cal.c  pir-dump.c  pir-kalman.c  pir-kalman2.c  pirctrl.c  pirdump.c  pirfilt.c  pirtest.c  sdh.c  setmode.c  testkin.c
src/experiments/: iros2014.c
